[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=61.0"]
[project]
name = "date-time-beta-package-sdk"
description = "It does nothing"
version = "1.0.1"
requires-python = ">=3.7"
keywords = []
authors = [{name = "Hamza Shoukat", email = "hamza.shoukat@apimatic.io"}]
urls = {Documentation = "https://www.apimatic.io/api-docs-preview/dashboard/645211493b07ee83103c66ef/v/1_1#/java/step-by-step-tutorial"}
dependencies = ["apimatic-core~=0.2.0", "apimatic-core-interfaces~=0.1.0", "apimatic-requests-client-adapter~=0.1.0", "python-dateutil~=2.8.1", "enum34~=1.1, >=1.1.10"]
classifiers = []
[project.optional-dependencies]
testutils = ["pytest>=7.2.2"]
